feat: update base styles

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -33,9 +33,29 @@ body {
     background-color 0.5s;
 }
 
-#app {
-  max-width: 1280px;
-  padding: 2rem;
-  margin: 0 auto;
-  font-weight: normal;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: none;
+
+  &:hover {
+    color: #535bf2;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
 }
