--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,34 +1,66 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+*,
+*::before,
+*::after {
+  margin: 0;
+  font-weight: normal;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 400;
-  line-height: 1.5;
-  color: rgb(255 255 255 / 87%);
+  line-height: 1.6;
+  color: var(--color-text);
   text-rendering: optimizelegibility;
-  background-color: #242424;
-  color-scheme: light dark;
-  font-synthesis: none;
+  background: var(--color-background);
+  transition:
+    color 0.5s,
+    background-color 0.5s;
 }
 
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+
+  &:hover {
+    color: #535bf2;
+  }
 }
 
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  padding: 0;
   margin: 0;
-  place-items: center;
 }
 
+li {
+  list-style: none;
+}
+
+// TODO DELETE
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
